[project]
name = "factchecking_crew"
version = "0.1.0"
description = "factchecking_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
factchecking_crew = "factchecking_crew.main:run"
run_crew = "factchecking_crew.main:run"
train = "factchecking_crew.main:train"
replay = "factchecking_crew.main:replay"
test = "factchecking_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
